# jit-autograd

./: .gitignore  README.md  SConstruct  meson.build
lib/: SConscript
lib/math_ir/: meson.build
lib/math_ir/header/: irop.h  operators.h
lib/math_ir/src/: irop.c
lib/util/: meson.build
lib/util/header/: allocator.h  logger.h
lib/util/src/: logger.c
src/: SConscript  main.c
